[package]
name = "notify-stream"
version = "0.1.0"
authors = ["spacemeowx2 <spacemeowx2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "=5.0.0-pre.6"
futures-core = "0.3"
futures-channel = "0.3"
